--- a/package.json
+++ b/package.json
@@ -31,8 +31,8 @@
     "supertest-as-promised": "^1.0.0"
   },
   "engines": {
-    "node": ">=0.10.22",
-    "npm": ">=1.3.14"
+    "node": "0.10.22",
+    "npm": "1.3.14"
   },
   "scripts": {
     "dev": "MONGOOSE_DEBUG=true NODE_ENV=development MONGO_URI=mongodb://localhost/greenlight-cms-dev nodemon app.js",
